--- a/threat/templates/api/listhash.html
+++ b/threat/templates/api/listhash.html
@@ -441,8 +441,7 @@
                                     {% for i in ind %}
                                         <tr id="" class="gradeX">
                                             <td>{{ i.threat_name }}</td>
-                                            <td><p style="border-bottom-style:dashed;">{{ i.sha256 }}</p></td>
-
+                                            <td><p>{{ i.sha256 }}</p></td>
                                             <td><p align="justify">{{ i.file_type_extension }} </p></td>
                                         </tr>
                                     {% endfor %}
