--- a/threat/templates/api/liste_api.html
+++ b/threat/templates/api/liste_api.html
@@ -416,56 +416,43 @@
                         <!-- Column -->
                         <div class="card">
                             <div class="card-body">
-                                {% if user.is_superuser == 1 %}
                                 <div class="col-4 float-right">
-                                    <form method="GET" action="/add_user">
+                                    <form method="GET" action="/add_api">
                                     {% csrf_token %}
-                                    <button type="submit" class="btn btn-info btn-rounded m-t-10 mb-2 float-right">Ajoute un utilisateur</button>
+                                    <button type="submit" class="btn btn-info btn-rounded m-t-10 mb-2 float-right">Ajouté un API</button>
                                 </form>
 
                                 </div>
-                                {% else %}
-                                {% endif %}
-                                <h4 class="card-title">Affichage des utilisateurs</h4>
+                                <h4 class="card-title">Affichage des APIs</h4>
                                 <h6 class="card-subtitle"></h6>
 
                                 <table class="table table-striped table-bordered" id="zero_config">
                                     <thead>
                                         <tr>
-                                            <th>id</th>
+                                            <th>Id</th>
                                             <th>Nom</th>
-                                            <th>Prenom</th>
-                                            <th>Pseudo</th>
-                                            <th>Address Mail</th>
-                                            <th>Dernier connexion</th>
-                                            <th>Type</th>
-                                            {% if user.is_superuser == 1 %}
+                                            <th>URL</th>
+                                            <th>Status</th>
+                                            <th>Key</th>
                                             <th>Modifier</th>
                                             <th>Suppression</th>
-                                            {% else %}
-                                            {% endif %}
                                         </tr>
                                     </thead>
                                     <tbody>
-                                    {% for i in utilisateurs %}
+                                    {% for i in list %}
                                         <tr id="" class="gradeX">
-                                            <td disabled="disabled">{{ i.id }}</td>
-                                            <td>{{ i.first_name }}</td>
-                                            <td>{{ i.last_name }}</td>
-                                            <td>{{ i.username }}</td>
-                                            <td>{{ i.email }}</td>
-                                            <td>{{ i.last_login }}</td>
-                                            {% if i.is_superuser == 1 %}
-                                            <td>SuperUser</td>
+                                            <td scope="col" disabled="disabled">{{ i.id }}</td>
+                                            <td scope="col">{{ i.name }}</td>
+                                            <td style="max-width: 200px;overflow: hidden;text-overflow: ellipsis;word-break: keep-all;white-space: nowrap;display: table-cell;">{{ i.url }}</td>
+                                            {% if i.status == 1 %}
+                                            <td class="text-center"><i class="fa fa-circle text-success" data-toggle="tooltip" data-placement="top" title="Online"></i></span></td>
                                             {% else %}
-                                            <td>Staff</td>
-                                            {% endif %}
-                                            {% if user.is_superuser == 1 %}
-                                            <td class="center"><bouton class="btn waves-effect waves-light btn-outline-warning" style="width: 126px;" onclick="edit({{ i.id }})" type="submit">Edit</bouton></td>
-                                            <td class="center"> <bouton class="btn waves-effect waves-light btn-outline-danger" style="width: 126px;" onclick="delete({{ i.id }})" type="submit">Delete</bouton></td>
-                                            {% else %}
+                                            <td class="text-center"><i class="fa fa-circle text-danger" data-toggle="tooltip" data-placement="top" title="Online"></i></span></td>
                                             {% endif %}
 
+                                            <td style="max-width: 200px;overflow: hidden;text-overflow: ellipsis;word-break: keep-all;white-space: nowrap;display: table-cell;">{{ i.key }}</td>
+                                            <td class="center"><bouton class="btn waves-effect waves-light btn-outline-warning" style="width: 126px;" onclick="edit({{ i.id }})" type="submit">Edit</bouton></td>
+                                            <td class="center"> <bouton class="btn waves-effect waves-light btn-outline-danger" style="width: 126px;" onclick="delete({{ i.id }})" type="submit">Delete</bouton></td>
                                         </tr>
                                     {% endfor %}
                                     </tbody>
@@ -512,19 +499,14 @@
     <!-- ============================================================== -->
     <!-- All Jquery -->
     <!-- ============================================================== -->
-        <script>
-function delete(id) {
-  var r = confirm("Vous voulez confirmer la suppression!");
-  if (r == true) {
-    window.location = '/delete_user/'+id;
-} else {
-
+<script>
+        function detele(id) {
+window.location = '/delete_api/'+id;
 }
-}
-</script>
+    </script>
     <script>
         function edit(id) {
-window.location = '/edit_user/'+id;
+window.location = '/edit_api/'+id;
 }
     </script>
     <script src="{% static 'assets/libs/jquery/dist/jquery.min.js' %}"></script>
