--- a/threat/templates/user/login_user.html
+++ b/threat/templates/user/login_user.html
@@ -89,11 +89,12 @@
                     </div>
                     <div class="row m-t-20">
                         <!-- Form -->
-                        <form class="col-12" action="index.html">
+                        <form class="col-12" action="/reset_password" method="POST">
+                            {% csrf_token %}
                             <!-- email -->
                             <div class="form-group row">
                                 <div class="col-12">
-                                    <input class="form-control form-control-lg" type="email" required="" placeholder="Email">
+                                    <input class="form-control form-control-lg" type="text"  name="reset" required="" placeholder="Username">
                                 </div>
                             </div>
                             <!-- pwd -->
