--- a/threat/templates/notifications/liste_notif.html
+++ b/threat/templates/notifications/liste_notif.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en">
 
+
 <head>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Tell the browser to be responsive to screen width -->
@@ -11,15 +13,21 @@
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="../../assets/images/favicon.png">
     <title>Xtreme admin Template - The Ultimate Multipurpose admin template</title>
+    <!-- This Page CSS -->
+       {% load static %}
+    <link href="{% static 'assets/libs/datatables.net-bs4/css/dataTables.bootstrap4.css' %}" rel="stylesheet">
     <!-- Custom CSS -->
-    {% load static %}
     <link href="{% static 'dist/css/style.min.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/extra-libs/DataTables/datatables.css' %}" rel="stylesheet" type="text/css" />
+    <!-- Custom CSS -->
     <link href="{% static 'assets/libs/sweetalert2/dist/sweetalert2.min.css' %}" rel="stylesheet">
+    <link href="{% static 'dist/css/style.min.css' %}" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+
 <![endif]-->
 </head>
 
@@ -379,12 +387,7 @@
             </div>
             <!-- End Sidebar scroll-->
         </aside>
-        <!-- ============================================================== -->
-        <!-- End Left Sidebar - style you can find in sidebar.scss  -->
-        <!-- ============================================================== -->
-        <!-- ============================================================== -->
-        <!-- Page wrapper  -->
-        <!-- ============================================================== -->
+
         <div class="page-wrapper">
             <!-- ============================================================== -->
             <!-- Bread crumb and right sidebar toggle -->
@@ -392,12 +395,12 @@
             <div class="page-breadcrumb">
                 <div class="row">
                     <div class="col-5 align-self-center">
-                        <h4 class="page-title">Form Basic</h4>
+                        <h4 class="page-title">Notifications</h4>
                         <div class="d-flex align-items-center">
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                                    <li class="breadcrumb-item active" aria-current="page">Library</li>
+                                    <li class="breadcrumb-item"><a href="#">Accueil</a></li>
+                                    <li class="breadcrumb-item active" aria-current="page">Affichage des Notifications</li>
                                 </ol>
                             </nav>
                         </div>
@@ -407,8 +410,8 @@
                             <div class="mr-2">
                                 <div class="lastmonth"></div>
                             </div>
-                            <div class=""><small>LAST MONTH</small>
-                                <h4 class="text-info mb-0 font-medium">$58,256</h4></div>
+                            <div class="">
+                                </div>
                         </div>
                     </div>
                 </div>
@@ -423,95 +426,62 @@
                 <!-- ============================================================== -->
                 <!-- Start Page Content -->
                 <!-- ============================================================== -->
-                <!-- row -->
-
-                <!-- row -->
-                <!-- .row -->
-
-                <!-- /.row -->
-                <!-- Row -->
                 <div class="row">
-                    <div class="col-lg-12">
-                        <div class="card">
-                            <div class="card-header bg-info">
-                                <h4 class="mb-0 text-white">Other Sample form</h4>
-                            </div>
-                            <form action="/add_api" method="POST">
-                                {% csrf_token %}
-                                <div class="card-body">
-                                    <h4 class="card-title">Person Info</h4>
-                                </div>
-                                <hr>
-                                <div class="form-body">
-                                    <div class="card-body">
-                                        <div class="row">
-                                            <div class="col-md-12 ">
-                                                <div class="form-group">
-                                                    <label>Nom</label>
-                                                    <input type="text" id="nom" name="nom" class="form-control">
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <div class="form-group">
-                                                    <label>URL</label>
-                                                    <input type="text" name="url" class="form-control">
-                                                </div>
-                                            </div>
-                                            <!--/span-->
-                                            <div class="col-md-6">
-                                                <div class="form-group">
-                                                    <label>URL test</label>
-                                                    <input type="text"  name="url_test" class="form-control">
-                                                </div>
-                                            </div>
-                                            <!--/span-->
-                                        </div>
-                                        <!--/row-->
-                                        <div class="row">
-                                            <div class="col-md-12">
-                                                <div class="form-group">
-                                                    <label>Clé API</label>
-                                                    <input type="text" id="key" name="key" class="form-control">
-                                                </div>
-                                            </div>
-                                            <!--/span-->
+                    <div class="col-12">
 
-                                            <!--/span-->
-                                        </div>
-                                    </div>
-                                    <div class="form-actions">
-                                        <div class="card-body">
-                                            <button type="submit"  alt="alert" class="btn btn-success" onclick="add()"> <i class="fa fa-check"></i>Enregistrer</button>
-                                            <button type="button" class="btn btn-dark">Cancel</button>
-                                        </div>
-                                    </div>
+                        <!-- Column -->
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="col-4 float-right">
+                                    <form method="GET" action="/add_notif">
+                                    {% csrf_token %}
+                                    <button type="submit" class="btn btn-info btn-rounded m-t-10 mb-2 float-right">Ajouté une notification</button>
+                                </form>
+
                                 </div>
-                            </form>
+                                <h4 class="card-title">Affichage des notifications</h4>
+                                <h6 class="card-subtitle"></h6>
+
+                                <table class="table table-striped table-bordered" id="zero_config">
+                                    <thead>
+                                        <tr>
+                                            <th>Id</th>
+                                            <th>Titre</th>
+                                            <th>Message</th>
+                                            <th>Status</th>
+                                            <th>Modification</th>
+                                            <th>Suppression</th>
+                                            <th>Envoi</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                    {% for i in list %}
+                                        <tr id="" class="gradeX">
+                                            <td scope="col" disabled="disabled">{{ i.id }}</td>
+                                            <td style="max-width: 100px;overflow: hidden;text-overflow: ellipsis;word-break: keep-all;white-space: nowrap;display: table-cell;">{{ i.titre }}</td>
+                                            <td style="max-width: 200px;overflow: hidden;text-overflow: ellipsis;word-break: keep-all;white-space: nowrap;display: table-cell;">{{ i.message }}</td>
+                                            {% if i.status == 1 %}
+                                            <td class="text-center"><i class="fa fa-circle text-success" data-toggle="tooltip" data-placement="top" title="Envoyé"></i></span></td>
+                                            {% else %}
+                                            <td class="text-center"><i class="fa fa-circle text-danger" data-toggle="tooltip" data-placement="top" title="Pas Encore"></i></span></td>
+                                            {% endif %}
+                                            {% if i.status == 0 %}
+                                            <td class="center"><bouton class="btn waves-effect waves-light btn-outline-info" style="width: 126px;" onclick="edit({{ i.id }})" >Modifier</bouton></td>
+                                            <td class="center"><bouton class="btn waves-effect waves-light btn-outline-danger" style="width: 126px;" onclick="dellette({{ i.id }})" >Supprimer</bouton></td>
+                                            <td class="center"><bouton class="btn waves-effect waves-light btn-outline-success" style="width: 126px;" onclick="send({{ i.id }})" >Envoyer</bouton></td>
+                                            {% else %}
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            {% endif %}
+                                        </tr>
+                                    {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <!-- Row -->
-                <!-- .row -->
-
-                <!-- /.row -->
-                <!-- .row -->
-
-                <!-- /.row -->
-                <!-- .row -->
-
-                <!-- .row -->
-
-                <!-- /.row -->
-                <!-- ROw -->
-
-                <!-- End Row -->
-
-                <!-- row -->
-                <!-- Row -->
-
-                <!-- Row -->
                 <!-- ============================================================== -->
                 <!-- End PAge Content -->
                 <!-- ============================================================== -->
@@ -547,10 +517,10 @@
     <!-- customizer Panel -->
     <!-- ============================================================== -->
 
-
     <!-- ============================================================== -->
     <!-- All Jquery -->
     <!-- ============================================================== -->
+
     <script src="{% static 'assets/libs/jquery/dist/jquery.min.js' %}"></script>
     <!-- Bootstrap tether Core JavaScript -->
     <script src="{% static 'assets/libs/popper.js/dist/umd/popper.min.js' %}"></script>
@@ -568,9 +538,64 @@
     <script src="{% static 'dist/js/sidebarmenu.js' %}"></script>
     <!--Custom JavaScript -->
     <script src="{% static 'dist/js/custom.min.js' %}"></script>
-
-
+    <script src="{% static 'assets/extra-libs/DataTables/datatables.min.js' %}"></script>
+    <script src="{% static 'dist/js/pages/datatable/datatable-basic.init.js' %}"></script>
     <script src="{% static 'assets/libs/sweetalert2/dist/sweetalert2.all.min.js' %}"></script>
+    <script type="text/javascript">
+        function send(idd) {
+        Swal.fire({
+  title: 'Are you sure?',
+  text: "You won't be able to revert this!",
+  icon: 'warning',
+  showCancelButton: true,
+  confirmButtonColor: '#3085d6',
+  cancelButtonColor: '#d33',
+  confirmButtonText: 'Yes, delete it!'
+}).then((result) => {
+  if (result.value) {
+    Swal.fire(
+      'Deleted!',
+      'Your file has been deleted.',
+      'success'
+    )
+    window.location = '/envoye_notif/'+idd ;
+  }
+})
+        }
+    </script>
+<script type="text/javascript">
+        function dellette(i) {
+        Swal.fire({
+  title: 'Are you sure?',
+  text: "You won't be able to revert this!",
+  icon: 'warning',
+  showCancelButton: true,
+  confirmButtonColor: '#3085d6',
+  cancelButtonColor: '#d33',
+  confirmButtonText: 'Yes, delete it!'
+}).then((result) => {
+  if (result.value) {
+    Swal.fire(
+      'Deleted!',
+      'Your file has been deleted.',
+      'success'
+    )
+    window.location = '/delete_notif/'+i ;
+  }
+})
+        }
+    </script>
+    <script>
+        function edit(id2)
+        {
+        window.location = '/edit_notif/'+id2 ;
+         }
+    </script>
+
+
+
+
 </body>
+
 
 </html>
