--- a/threat/templates/user/add_user.html
+++ b/threat/templates/user/add_user.html
@@ -22,6 +22,7 @@
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+
 <![endif]-->
 </head>
 
@@ -455,8 +456,12 @@
                                         <div class="row">
                                             <div class="col-md-6">
                                                 <div class="form-group">
-                                                    <label for="password">Mot de passe : <span class="danger">*</span></label>
-                                                    <input type="password" class="form-control required" id="password" name="password"> </div>
+                                                    <label for="pwd">Mot de passe : <span class="danger">*</span></label>
+                                                    <input type="password" id="pwd" name="pwd" class="form-control required" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
+
+
+                                                </div>
+
                                             </div>
                                         </div>
                                     </section>
@@ -699,6 +704,7 @@
         }
     })
     </script>
+
 </body>
 
 </html>
