--- a/threat/templates/user/user_display.html
+++ b/threat/templates/user/user_display.html
@@ -21,6 +21,7 @@
     <link href="{% static 'assets/extra-libs/DataTables/datatables.css' %}" rel="stylesheet" type="text/css" />
     <!-- Custom CSS -->
     <link href="{% static 'dist/css/style.min.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/libs/sweetalert2/dist/sweetalert2.min.css' %}" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -472,7 +473,7 @@
                                             {% endif %}
                                             {% if user.is_superuser == 1 %}
                                             <td class="center"><bouton class="btn waves-effect waves-light btn-outline-warning" style="width: 126px;" onclick="edit({{ i.id }})" type="submit">Edit</bouton></td>
-                                            <td class="center"> <bouton class="btn waves-effect waves-light btn-outline-danger" style="width: 126px;" onclick="delete({{ i.id }})" type="submit">Delete</bouton></td>
+                                            <td class="center"> <bouton class="btn waves-effect waves-light btn-outline-danger" style="width: 126px;" onclick="dellete({{ i.id }})" type="submit">Delete</bouton></td>
                                             {% else %}
                                             {% endif %}
 
@@ -522,16 +523,28 @@
     <!-- ============================================================== -->
     <!-- All Jquery -->
     <!-- ============================================================== -->
-        <script>
-function delete(id) {
-  var r = confirm("Vous voulez confirmer la suppression!");
-  if (r == true) {
-    window.location = '/delete_user/'+id;
-} else {
-
-}
-}
-</script>
+       <script>
+        function dellete(id) {
+        Swal.fire({
+  title: 'Are you sure?',
+  text: "You won't be able to revert this!",
+  icon: 'warning',
+  showCancelButton: true,
+  confirmButtonColor: '#3085d6',
+  cancelButtonColor: '#d33',
+  confirmButtonText: 'Yes, delete it!'
+}).then((result) => {
+  if (result.value) {
+    Swal.fire(
+      'Deleted!',
+      'Your file has been deleted.',
+      'success'
+    )
+    window.location = '/delete_user/'+id ;
+  }
+})
+        }
+    </script>
     <script>
         function edit(id) {
 window.location = '/edit_user/'+id;
@@ -556,6 +569,7 @@ window.location = '/edit_user/'+id;
     <script src="{% static 'dist/js/custom.min.js' %}"></script>
     <script src="{% static 'assets/extra-libs/DataTables/datatables.min.js' %}"></script>
     <script src="{% static 'dist/js/pages/datatable/datatable-basic.init.js' %}"></script>
+    <script src="{% static 'assets/libs/sweetalert2/dist/sweetalert2.all.min.js' %}"></script>
 
 
 
