--- a/threat/templates/notifications/notifications.html
+++ b/threat/templates/notifications/notifications.html
@@ -29,7 +29,7 @@
                                 <h1>Actualité :{{ titre }}</h1>
                                 <br>
                                 <br>
-                                <p>{{ message }}</p>
+                                {{ message | safe }}
                                 <b>En vous souhaitant cordialement une excellente journée</b></td>
                         </tr>
                     </tbody>
