--- a/threat/templates/notifications/add_notif.html
+++ b/threat/templates/notifications/add_notif.html
@@ -20,6 +20,7 @@
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+
 <![endif]-->
 </head>
 
@@ -360,6 +361,16 @@
 
                             </ul>
                         </li>
+                        <li class="nav-small-cap"><i class="mdi mdi-dots-horizontal"></i> <span class="hide-menu">Notification</span></li>
+                        <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-account-multiple"></i><span class="hide-menu">Notifications</span></a>
+                            <ul aria-expanded="false" class="collapse  first-level">
+
+                                <li class="sidebar-item"><a href="/add_notif" class="sidebar-link"><i class="mdi mdi-adjust"></i><span class="hide-menu"> Ajout d'une notification</span></a></li>
+                                <li class="sidebar-item"><a href="/display_notif" class="sidebar-link"><i class="mdi mdi-adjust"></i><span class="hide-menu"> Affichage des notifications </span></a></li>
+
+
+                            </ul>
+                        </li>
                         {% endif %}
                         <li class="nav-small-cap"><i class="mdi mdi-dots-horizontal"></i> <span class="hide-menu">Feed Threat</span></li>
                         <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-account-multiple"></i><span class="hide-menu">Feed</span></a>
@@ -392,12 +403,12 @@
             <div class="page-breadcrumb">
                 <div class="row">
                     <div class="col-5 align-self-center">
-                        <h4 class="page-title">Form Basic</h4>
+                        <h4 class="page-title">Ajout Notification</h4>
                         <div class="d-flex align-items-center">
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                                    <li class="breadcrumb-item active" aria-current="page">Library</li>
+                                    <li class="breadcrumb-item"><a href="#">Accueil</a></li>
+                                    <li class="breadcrumb-item active" aria-current="page">Notifications</li>
                                 </ol>
                             </nav>
                         </div>
@@ -407,9 +418,7 @@
                             <div class="mr-2">
                                 <div class="lastmonth"></div>
                             </div>
-                            <div class=""><small>LAST MONTH</small>
-                                <h4 class="text-info mb-0 font-medium">$58,256</h4></div>
-                        </div>
+
                     </div>
                 </div>
             </div>
@@ -433,13 +442,10 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="card">
-                            <div class="card-header bg-info">
-                                <h4 class="mb-0 text-white">Other Sample form</h4>
-                            </div>
                             <form action="/add_notif" method="POST">
                                 {% csrf_token %}
                                 <div class="card-body">
-                                    <h4 class="card-title">Person Info</h4>
+                                    <h4 class="card-title">Informations</h4>
                                 </div>
                                 <hr>
                                 <div class="form-body">
@@ -455,8 +461,8 @@
                                        <div class="row">
                                             <div class="col-md-12 ">
                                                 <div class="form-group">
-                                                    <label>Titre</label>
-                                                    <textarea id="message" name="message" class="form-control" rows="5"></textarea>
+                                                    <label>Message</label>
+                                                    <textarea id="demo2" name="demo1"></textarea>
 
                                                 </div>
                                             </div>
@@ -532,6 +538,19 @@
     <!-- ============================================================== -->
     <!-- All Jquery -->
     <!-- ============================================================== -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
+    <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
+<script>
+	var tt = new SimpleMDE({
+		element: document.getElementById("demo2"),
+		spellChecker: false,
+		autosave: {
+			enabled: true,
+			unique_id: "demo2",
+		},
+	});
+	tt.value();
+</script>
     <script src="{% static 'assets/libs/jquery/dist/jquery.min.js' %}"></script>
     <!-- Bootstrap tether Core JavaScript -->
     <script src="{% static 'assets/libs/popper.js/dist/umd/popper.min.js' %}"></script>
