--- a/threat/templates/notifications/edit_notif.html
+++ b/threat/templates/notifications/edit_notif.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
-{% if user.is_authenticated %}
 <html dir="ltr" lang="en">
 
-
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Tell the browser to be responsive to screen width -->
@@ -14,19 +11,16 @@
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="../../assets/images/favicon.png">
     <title>Xtreme admin Template - The Ultimate Multipurpose admin template</title>
-    <!-- This Page CSS -->
-       {% load static %}
-    <link href="{% static 'assets/libs/datatables.net-bs4/css/dataTables.bootstrap4.css' %}" rel="stylesheet">
     <!-- Custom CSS -->
+    {% load static %}
     <link href="{% static 'dist/css/style.min.css' %}" rel="stylesheet">
-    <link href="{% static 'assets/extra-libs/DataTables/datatables.css' %}" rel="stylesheet" type="text/css" />
-    <!-- Custom CSS -->
-    <link href="{% static 'dist/css/style.min.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/libs/sweetalert2/dist/sweetalert2.min.css' %}" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+
 <![endif]-->
 </head>
 
@@ -69,7 +63,7 @@
                         <span class="logo-text">
                              <!-- dark Logo text -->
                              <img src="{% static 'assets/images/logo-text.png' %}" alt="homepage" class="dark-logo" />
-                             <!-- Light Logo text -->    
+                             <!-- Light Logo text -->
                              <img src="{% static 'assets/images/logo-light-text.png' %}" class="light-logo" alt="homepage" />
                         </span>
                     </a>
@@ -183,7 +177,7 @@
                         <!-- ============================================================== -->
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle waves-effect waves-dark" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="mdi mdi-bell font-24"></i>
-                                
+
                             </a>
                             <div class="dropdown-menu dropdown-menu-right mailbox animated bounceInDown">
                                 <span class="with-arrow"><span class="bg-primary"></span></span>
@@ -236,7 +230,7 @@
                         <!-- ============================================================== -->
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle waves-effect waves-dark" href="" id="2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="font-24 mdi mdi-comment-processing"></i>
-                                
+
                             </a>
                             <div class="dropdown-menu dropdown-menu-right mailbox animated bounceInDown" aria-labelledby="2">
                                 <span class="with-arrow"><span class="bg-danger"></span></span>
@@ -409,12 +403,12 @@
             <div class="page-breadcrumb">
                 <div class="row">
                     <div class="col-5 align-self-center">
-                        <h4 class="page-title">Liste Top Malware</h4>
+                        <h4 class="page-title">Form Basic</h4>
                         <div class="d-flex align-items-center">
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="#">Accueil</a></li>
-                                    <li class="breadcrumb-item active" aria-current="page">Feed</li>
+                                    <li class="breadcrumb-item"><a href="#">Home</a></li>
+                                    <li class="breadcrumb-item active" aria-current="page">Library</li>
                                 </ol>
                             </nav>
                         </div>
@@ -424,8 +418,8 @@
                             <div class="mr-2">
                                 <div class="lastmonth"></div>
                             </div>
-                            <div class=""><small></small>
-                                </div>
+                            <div class=""><small>LAST MONTH</small>
+                                <h4 class="text-info mb-0 font-medium">$58,256</h4></div>
                         </div>
                     </div>
                 </div>
@@ -440,55 +434,76 @@
                 <!-- ============================================================== -->
                 <!-- Start Page Content -->
                 <!-- ============================================================== -->
+                <!-- row -->
+
+                <!-- row -->
+                <!-- .row -->
+
+                <!-- /.row -->
+                <!-- Row -->
                 <div class="row">
-                    <div class="col-12">
-
-                        <!-- Column -->
+                    <div class="col-lg-12">
                         <div class="card">
-                            <div class="card-body">
-                                <h4 class="card-title">Liste Top Malware</h4>
-                                <h6 class="card-subtitle"></h6>
-
-                                <table class="table table-striped table-bordered" id="zero_config">
-                                    <thead>
-                                        <tr>
-                                            <th>Id</th>
-                                            <th>Nom</th>
-                                            <th>Alias</th>
-                                            <th>Catégorie</th>
-                                            <th>Risque</th>
-                                            <th>Date de mise à jour</th>
-                                            <th>Nombres d'indicateurs</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                    {% for i in ind %}
-                                        <tr id="" class="gradeX">
-                                            <td disabled="disabled">{{ i.tid }}</td>
-                                            <td>{{ i.name }}</td>
-                                            <td>{{ i.aliases }}</td>
-                                            <td>{{ i.category }}</td>
-                                            <td>{{ i.risk }}</td>
-                                            <td>{{ i.stamp_updated }} </td>
-                                            <!--{% if i.risk == 'unknown' %}
-                                            <td><bouton class="btn btn-rounded btn-block btn-outline-light"><i class="fas fa-exclamation-circle"></i>{{ i.risk }}</bouton></td>
-                                            {% elif i.risk == 'high' %}
-                                            <td><bouton class="btn btn-rounded btn-block btn-outline-danger"><i class="fal fa-radiation"></i>{{ i.risk }}</bouton></td>
-                                            {% else %}
-                                            <td>{{ i.risk }}</td>
-                                            {% endif %}-->
-                                            <td>
-                                            <bouton class="btn waves-effect waves-light btn-rounded btn-secondary" style="margin-bottom: 10px;">{{ i.indicators }}</bouton>
-
-                                            </td>
-                                        </tr>
-                                    {% endfor %}
-                                    </tbody>
-                                </table>
+                            <div class="card-header bg-info">
+                                <h4 class="mb-0 text-white">Other Sample form</h4>
                             </div>
+                            <form action="/update_notif/{{ notif.id }}" method="POST">
+                                {% csrf_token %}
+                                <div class="card-body">
+                                    <h4 class="card-title">Person Info</h4>
+                                </div>
+                                <hr>
+                                <div class="form-body">
+                                    <div class="card-body">
+                                        <div class="row">
+                                            <div class="col-md-12 ">
+                                                <div class="form-group">
+                                                    <label>Titre</label>
+                                                    <input type="text" id="titre" name="titre" class="form-control" value="{{ notif.titre }}">
+                                                </div>
+                                            </div>
+                                        </div>
+                                       <div class="row">
+                                            <div class="col-md-12 ">
+                                                <div class="form-group">
+                                                    <label>Message</label>
+                                                    <textarea id="demo3" name="demo1">{{ notif.get_message_as_markdown }}</textarea>
+
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="form-actions">
+                                        <div class="card-body">
+                                            <button type="submit"  alt="alert" class="btn btn-success" onclick="add()"> <i class="fa fa-check"></i>Enregistrer</button>
+                                            <button type="button" class="btn btn-dark">Cancel</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
+                <!-- Row -->
+                <!-- .row -->
+
+                <!-- /.row -->
+                <!-- .row -->
+
+                <!-- /.row -->
+                <!-- .row -->
+
+                <!-- .row -->
+
+                <!-- /.row -->
+                <!-- ROw -->
+
+                <!-- End Row -->
+
+                <!-- row -->
+                <!-- Row -->
+
+                <!-- Row -->
                 <!-- ============================================================== -->
                 <!-- End PAge Content -->
                 <!-- ============================================================== -->
@@ -524,9 +539,22 @@
     <!-- customizer Panel -->
     <!-- ============================================================== -->
 
+
     <!-- ============================================================== -->
     <!-- All Jquery -->
     <!-- ============================================================== -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
+    <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
+<script>
+	var tt = new SimpleMDE({
+		element: document.getElementById("demo3"),
+		spellChecker: false,
+		autosave: {
+			enabled: true,
+			unique_id: "demo3",
+		},
+	});
+</script>
     <script src="{% static 'assets/libs/jquery/dist/jquery.min.js' %}"></script>
     <!-- Bootstrap tether Core JavaScript -->
     <script src="{% static 'assets/libs/popper.js/dist/umd/popper.min.js' %}"></script>
@@ -544,15 +572,9 @@
     <script src="{% static 'dist/js/sidebarmenu.js' %}"></script>
     <!--Custom JavaScript -->
     <script src="{% static 'dist/js/custom.min.js' %}"></script>
-    <script src="{% static 'assets/extra-libs/DataTables/datatables.min.js' %}"></script>
-    <script src="{% static 'dist/js/pages/datatable/datatable-basic.init.js' %}"></script>
 
 
-
+    <script src="{% static 'assets/libs/sweetalert2/dist/sweetalert2.all.min.js' %}"></script>
 </body>
 
-
 </html>
-{% elif user.is_authenticated is not None %}
-<meta http-equiv="Refresh" content="0; url=//127.0.0.1:8000/login_user" />
-{% endif %}
